--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,18 @@
+:root {
+    --color-very-dark-blue: hsl(243, 87%, 12%);
+    --color-desaturated-blue: hsl(238, 22%, 44%);
+    --color-bright-blue: hsl(224, 93%, 58%);
+    --color-moderate-cyan: hsl(170, 45%, 43%);
+    --color-light-grayish-blue: hsl(240, 75%, 98%);
+    --light-gray: hsl(0, 0%, 75%);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
 }
