updated to use rem units for text

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,81 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
+    color: var(--color-very-dark-blue);
+    font-size: 1.6rem;
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Raleway', sans-serif;
+}
+
+.content {
+    max-width: 1240px;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+
+header .content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 50px;
+}
+
+header .content nav a {
+    font-family: 'Raleway', sans-serif;
+    color: var(--color-very-dark-blue);
+    text-decoration: none;
+    margin-left: 40px;
+    opacity: 0.7;
+}
+
+header .content nav a:hover {
+    opacity: 1;
+    text-decoration: underline;
+}
+
+header .content nav a:first-child {
+    margin-left: 0;
+}
+.hero {
+    width: 100vw;
+}
+
+.hero .content {
+    display: flex;
+}
+
+.hero .content .info {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    justify-content: center;
+}
+
+.hero .content .info h1 {
+    font-size: 3.6rem;
+}
+
+.hero .content .info p {
+    font-size: 1.8rem;
+}
+
+.hero .content img {
+    max-width: 50%;
+}
+
+.attribution { 
+    font-size: 1.1rem; text-align: center; 
+}
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
 }
