--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: 0;
 }
 
 html {
@@ -21,9 +22,11 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: var(--color-very-dark-blue);
     font-size: 1.6rem;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, button {
     font-family: 'Raleway', sans-serif;
 }
 
@@ -78,6 +81,38 @@ header .content nav a:first-child {
 
 .hero .content .info p {
     font-size: 1.8rem;
+}
+
+.hero .content .info .actions {
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.hero .content .info .actions input {
+    height: 100%;
+    width: 50%;
+    padding: 0 20px;
+    border: 1px solid var(--light-gray);
+    border-radius: 3px;
+}
+
+.hero .content .info .actions ::placeholder {
+    color: var(--light-gray);
+    font-family: 'Raleway';
+}
+
+.hero .content .info .actions button {
+    height: 100%;
+    width: 30%;
+    margin-left: 12px;
+    background-color: var(--color-bright-blue);
+    color: white;
+    font-weight: 700;
+    border: none;
+    border-radius: 3px;
+
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
 }
 
 .hero .content img {
