--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     --color-desaturated-blue: hsl(238, 22%, 44%);
     --color-bright-blue: hsl(224, 93%, 58%);
     --color-moderate-cyan: hsl(170, 45%, 43%);
-    --color-light-grayish-blue: hsl(240, 75%, 98%);
+    --color-light-grayish-blue: #f8f8fe;
     --light-gray: hsl(0, 0%, 75%);
 }
 
@@ -30,6 +30,15 @@ h1, h2, h3, h4, button {
     font-family: 'Raleway', sans-serif;
 }
 
+button {
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+button:hover {
+    filter: brightness(120%);
+}
+
 .content {
     max-width: 1240px;
     padding: 20px;
@@ -50,6 +59,7 @@ header .content nav a {
     text-decoration: none;
     margin-left: 40px;
     opacity: 0.7;
+    transition: all 0.4s ease;
 }
 
 header .content nav a:hover {
@@ -82,10 +92,12 @@ header .content nav a:first-child {
 
 .hero .content .info h1 {
     font-size: 3.6rem;
+    line-height: 4.6rem;
 }
 
 .hero .content .info p {
     font-size: 1.8rem;
+    line-height: 2.8rem;
 }
 
 .hero .content .info .actions {
@@ -155,6 +167,12 @@ section.productive .content .section-text > p span {
     column-gap: 6px;
     color: var(--color-moderate-cyan);
     border-bottom: 1px solid var(--color-moderate-cyan);
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+section.productive .content .section-text > p span:hover {
+    filter: brightness(120%);
 }
 
 section.productive .content .section-text .testimonial {
@@ -201,11 +219,343 @@ section.productive .content .section-text .testimonial .testimonial-owner p span
     font-weight: 700;
 }
 
-
-.attribution { 
-    font-size: 1.1rem; text-align: center; 
+section.early-access {
+    background-color: var(--color-desaturated-blue);
 }
 
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
+section.early-access .content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 100px;
+    padding: 60px 20px;
+}
+
+section.early-access .content .section-text {
+    color: white;
+}
+
+section.early-access .content .section-text h3 {
+    font-size: 2.8rem;
+}
+
+section.early-access .content .section-text p {
+    max-width: 70%;
+    margin-top: 12px;
+    font-size: 1.6rem;
+    line-height: 2.0rem;
+}
+
+section.early-access .content .section-actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 80px;
+}
+
+section.early-access .content .section-actions input {
+    height: 40px;
+    padding: 0 20px;
+    border: 1px solid var(--light-gray);
+    border-radius: 3px;
+}
+
+section.early-access .content .section-actions ::placeholder {
+    font-family: 'Raleway';
+    color: var(--light-gray);
+}
+
+section.early-access .content .section-actions button {
+    height: 40px;
+    width: 40%;
+    margin-top: 12px;
+    background-color: var(--color-bright-blue);
+    color: white;
+    font-weight: 700;
+    border: none;
+    border-radius: 3px;
+
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+}
+
+footer {
+    background-color: var(--color-very-dark-blue);
+    color: white;
+}
+
+footer .content {
+    padding-top: 100px;
+}
+
+footer .content >img {
+    max-width: 180px;
+    margin-bottom: 20px;
+}
+
+footer .content .footer-content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+footer .content .footer-content .contacts {
+    max-width: 320px;
+    display: grid;
+    grid-template-columns: 20px 1fr;
+    gap: 20px;
+    align-items: center;
+}
+
+footer .content .footer-content nav {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    column-gap: 100px;
+    row-gap: 16px;
+}
+
+footer .content .footer-content nav a {
+    text-decoration: none;
+    color: white;
+    transition: color 0.4s;
+}
+
+footer .content .footer-content nav a:hover {
+    color: var(--color-bright-blue);
+}
+
+footer .content .footer-content .social-midia {
+    display: flex;
+    justify-content: flex-end;
+}
+
+footer .content .footer-content .social-midia .midia {
+    margin-left: 16px;
+    border: 1px solid white;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: white;
+    transition: all 0.4s ease;
+}
+
+footer .content .footer-content .social-midia .midia i {
+    font-size: 16px;
+}
+
+footer .content .footer-content .social-midia .midia:hover {
+    color: var(--color-bright-blue);
+    border-color: var(--color-bright-blue);
+}
+
+footer .footer-attribution .attribution { 
+    font-size: 11px; 
+    text-align: center;
+}
+
+footer .footer-attribution .attribution a { 
+    color: var(--color-bright-blue);
+    text-decoration: none; 
+}
+
+footer .footer-attribution .attribution a:hover {
+    opacity: 0.7;
+}
+
+@media (max-width: 768px) {
+    html {
+        font-size: 55%;
+    }
+
+    .hero .content {
+        flex-direction: column-reverse;
+        text-align: center;
+        align-items: center;
+        row-gap: 40px;
+    }
+
+    .hero .content .info .actions {
+        flex-direction: column;
+        justify-content: center;
+        row-gap: 20px;
+        height: 100px;
+    }
+
+    .hero .content .info .actions button {
+        width: 50%;
+        margin-left: 0;
+    }
+
+    section.productive .content {
+        flex-direction: column-reverse;
+        align-items: center;
+        row-gap: 60px;
+    }
+
+    section.productive .content .section-text h2 {
+        text-align: center;
+    }
+
+    section.productive .content .section-text p {
+        max-width: 60%;
+        margin: 0 auto;
+    }
+
+    section.productive .content .section-text > p span {
+        margin: 0 auto;
+    }
+
+    section.productive .content .section-text .testimonial {
+        margin: 0 auto;
+        margin-top: 30px;
+    }
+
+    section.early-access .content {
+        grid-template-columns: 1fr;
+        gap: 20px;
+        align-items: center;
+    }
+
+    section.early-access .content .section-text {
+        text-align: center;
+    }
+
+    section.early-access .content .section-text p {
+        margin: 0 auto;
+        margin-top: 12px;
+        font-size: 1.4rem;
+    }
+
+    section.early-access .content .section-actions {
+        padding-left: 0;
+        width: 300px;
+        margin: 0 auto;
+        max-width: 60%;
+    }
+
+    section.early-access .content .section-actions button {
+        width: 100%;
+    }
+
+    footer .content {
+        text-align: center;
+    }
+
+    footer .content .footer-content .contacts {
+        margin: 0 auto;
+    }
+
+    footer .content .footer-content {
+        flex-direction: column;
+        row-gap: 40px;
+        width: max-content;
+        margin: 0 auto;
+    }
+
+    footer .content .social-midia {
+        align-self: center;
+    }
+
+    footer .content .footer-content .social-midia .midia:first-child {
+        margin-left: 0;
+    }
+
+}
+
+@media (max-width: 425px) {
+    
+    header .content >img {
+        max-width: 120px;
+    }
+
+    header .content nav a {
+        margin-left: 15px;
+    }
+
+    .hero {
+        background-image: url('/images/bg-curve-mobile.svg');
+    }
+
+    .hero .content img {
+        max-width: 80%;
+    }
+
+    .hero .content .info h1 {
+        font-size: 28px;
+    }
+
+    .hero .content .info .actions input,
+    .hero .content .info .actions button {
+        width: 90%;
+    }
+
+    section.productive .content .section-text h2 {
+        font-size: 18px;
+    }
+
+    section.productive .content .section-text p {
+        max-width: 90%;
+    }
+
+    section.productive .content .section-text .testimonial {
+        width: 80%;
+    }
+
+    section.early-access .content .section-text h3 {
+        font-size: 22px;
+    }
+
+    footer .content {
+        text-align: initial;
+    }
+
+    footer .content .footer-content .contacts {
+        margin: 0;
+    }
+
+    footer .content .footer-content {
+        flex-direction: column;
+        row-gap: 40px;
+        width: max-content;
+        margin: 0;
+        width: 100%;
+    }
+
+    footer .content .footer-content nav {
+        grid-template-columns: max-content;
+    }
+
+    footer .content .footer-content nav span:nth-child(1) {
+        order: 1;
+    }
+
+    footer .content .footer-content nav span:nth-child(2) {
+        order: 5;
+        margin-top: 40px;
+    }
+
+    footer .content .footer-content nav span:nth-child(3) {
+        order: 2;
+    }
+
+    footer .content .footer-content nav span:nth-child(4) {
+        order: 6;
+    }
+
+    footer .content .footer-content nav span:nth-child(5) {
+        order: 3;
+    }
+
+    footer .content .footer-content nav span:nth-child(6) {
+        order: 7;
+    }
+
+    footer .content .footer-content nav span:nth-child(7) {
+        order: 4;
+    }
+
+
 }
